# Agentic-AI--Assignment-01

Agentic AI/Pratice Assignment -01/explore-uv/: pyproject.toml
Agentic AI/Pratice Assignment -01/explore-uv/src/explore_uv/: main.py
Agentic AI/Pratice Assignment -01/open_router_1/openai_agent_project/: pyproject.toml
Agentic AI/Pratice Assignment -01/open_router_1/openai_agent_project/src/openai_agent_project/: __init__.py  main.py
