[project]
name = "explore-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nidanasar", email = "nidashafqet@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
explore_uv = "explore_uv.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
